vidhandler.js added, audio overlapping issue resolved

--- a/css/full-slider.css
+++ b/css/full-slider.css
@@ -13,6 +13,7 @@ body {
 .item,
 .active {
     height: 100%;
+    width: 100%;
 }
 
 .carousel-inner {
